Fix project view on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,3 +23,20 @@ code {
     width: auto;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  #projects-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #projects-container div {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  #project-view-all-btn {
+    text-align: center;
+  }
+}
